--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
-DB_CONNECTION=mongodb+srv://Jump_Blooming:Jxu4PWe4Mjn5LMs_RyNV@balacloud.tcxjce9.mongodb.net/
+DB_CONNECTION=mongodb+srv://Jump_Blooming:Jxu4PWe4Mjn5LMs_RyNV@balacloud.tcxjce9.mongodb.net/eCommerce
 SECRET_JWT_SEED=Wg7&M@ew@kwD#skLp5ZZ4CY-^&CH9&ZKkCkT5oHzpQ%mvr7j%CL74yareg%n%DD3
