--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,6 @@
     "express-validator": "^7.0.1",
     "json-schema": "^0.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.4",
-    "socket.io": "^4.7.5"
+    "mongoose": "^8.2.4"
   }
 }
