--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "backend proyecto IngSoftware I. Desarrollado en nodeJS, reactJS y mongoDB",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "backend": "nodemon index.js"
   },
   "keywords": [],
   "author": "Laura Gallo, Felipe Plata, Jean Pool Esguerra, Eduardo Acosta y Sebastian Balanta",
