--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-VERSION=v0.9.2.1b
+VERSION=v0.9.2.2
 DB_CONNECTION=mongodb+srv://Jump_Blooming:Jxu4PWe4Mjn5LMs_RyNV@balacloud.tcxjce9.mongodb.net/eCommerce
 SECRET_JWT_SEED=Wg7&M@ew@kwD#skLp5ZZ4CY-^&CH9&ZKkCkT5oHzpQ%mvr7j%CL74yareg%n%DD3
 NODE_ENV=development
