--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# ssl
+/certs
+
 # dependencies
 /node_modules
 /.pnp
